@@ -54,3 +54,5 @@ cairo_ps <- function(filename = if(onefile) "Rplots.ps" else "Rplot%03d.ps",
                         pointsize, bg, NA_integer_, antialias, onefile,
                         family))
 }
+
+cairoVersion <- function() .Call(C_cairoVersion)
