@@ -162,3 +162,5 @@ bmp <- function(filename = "Rplot%03d.bmp",
                              d$colortype, d$maxcubesize, bg, bg, d$fonts, res,
                              0L, 0L, "", 0, 0, d$family))
 }
+
+grSoftVersion <- function() c(cairo = cairoVersion())
