@@ -28,8 +28,10 @@
 int R_cairoCdynload(int local, int now);
 
 typedef SEXP (*R_cairo)(SEXP args);
+typedef SEXP (*R_cairoVersion_t)(void);
 
 static R_cairo R_devCairo;
+static R_cairoVersion_t R_cairoVersion;
 
 static int Load_Rcairo_Dll(void)
 {
@@ -42,6 +44,7 @@ static int Load_Rcairo_Dll(void)
     if(!res) return initialized;
     R_devCairo = (R_cairo) R_FindSymbol("in_Cairo", "cairo", NULL);
     if (!R_devCairo) error("failed to load cairo DLL");
+    R_cairoVersion = (R_cairoVersion_t) R_FindSymbol("in_CairoVersion", "cairo", NULL);
     initialized = 1;
     return initialized;
 }
@@ -52,4 +55,14 @@ SEXP devCairo(SEXP args)
     if (Load_Rcairo_Dll() < 0) warning("failed to load cairo DLL");
     else (R_devCairo)(args);
     return R_NilValue;
+}
+
+SEXP cairoVersion(void)
+{
+    if (Load_Rcairo_Dll() < 0) {
+	warning("failed to load cairo DLL");
+	return mkString("");
+    }
+    else return (R_cairoVersion)();
+
 }
