@@ -161,6 +161,9 @@
       versions of third-party software in use in this session.
       Currently reports versions of \code{zlib}, \code{bzlib}, the
       \code{liblzma} from \code{xz}, PCRE, ICU and TRE.
+
+      A similar function \code{grSoftVersion} in package \pkg{grDevices}
+      reports on third-party graphics software such as cairographics.
     }
   }
 
@@ -239,7 +242,7 @@
     \itemize{
       \item \code{download.file(method = "lynx")} is defunct.
 
-      \item Use of the included versions of \code{zlib}, \code{bzlib},
+      \item Use of the included versions of \code{zlib}, \code{bzip2},
       \code{xz} and PCRE is deprecated: these are frozen and will
       eventually be removed.
     }
